--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 			<span id="clock"></span>
 		</section>
 		<footer>
-			<span onclick="setTimeOffset('hours', 1)">+ 1 hour</span>
-			<span onclick="setTimeOffset('hours',-1)">- 1 hour</span>
-			<span onclick="setTimeOffset('minutes', 1)">+ 1 minute</span>
-			<span onclick="setTimeOffset('minutes',-1)">- 1 minute</span>
-			
+			<span onclick="setTimeOffset('hours', 1)">+ 1 h<span>our</span></span><span> | </span>
+			<span onclick="setTimeOffset('hours',-1)">- 1 hour</span></span><span> | </span>
+			<span onclick="setTimeOffset('minutes', 1)">+ 1 minute</span></span><span> | </span>
+			<span onclick="setTimeOffset('minutes',-1)">- 1 minute</span></span><span> | </span>
+			<span onclick="setTimeOffset('seconds', 10)">+ 10 seconds</span></span><span> | </span>
+			<span onclick="setTimeOffset('seconds',-10)">- 10 seconds</span></span>
+
 		</footer>
 	</main>
 </body>
