telling time with audio

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			</div>
 			<span id="digitalClock"></span>
 			<div id="ripleyOuter">
+				<p id="ripleySpeaks"></p>
 				<img id="ripley" src="img/suit.png">
 			</div>
 		</section>
@@ -35,7 +36,9 @@
 			<span id="subtractMinute">- 1 m<span class="longLabel">inute</span></span><span> | </span>
 			<span id="addTenSeconds">+ 10 s<span class="longLabel">econds</span></span><span> | </span>
 			<span id="subtractTenSeconds">- 10 s<span class="longLabel">econds</span></span><span> | </span>
-			<span id="resetTimeOffset">reset</span></span>
+			<span id="resetTimeOffset">reset</span><span> | </span>
+			<span id="mute">🔊</span>
+			<span id="unmute">🔈</span>
 		</footer>
 	</main>
 </body>
