--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-	<meta name="theme-color" content="#2B2147" />
+	<meta name="theme-color" content="#e0bfb0" />
+	<link rel="shortcut icon" href="img/favicon.ico">
 	<title>Clock</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
