--- a/index.html
+++ b/index.html
@@ -31,15 +31,22 @@
 			</div>
 		</section>
 		<footer>
-			<span id="addHour">+ 1 h<span class="longLabel">our</span></span><span> | </span>
-			<span id="subtractHour">- 1 h<span class="longLabel">our</span></span><span> | </span>
-			<span id="addMinute">+ 1 m<span class="longLabel">inute</span></span><span> | </span>
-			<span id="subtractMinute">- 1 m<span class="longLabel">inute</span></span><span> | </span>
-			<span id="addTenSeconds">+ 10 s<span class="longLabel">econds</span></span><span> | </span>
-			<span id="subtractTenSeconds">- 10 s<span class="longLabel">econds</span></span><span> | </span>
-			<span id="resetTimeOffset">reset</span><span> | </span>
-			<span id="mute">🔊</span>
-			<span id="unmute">🔈</span>
+			<div id="addHour">+ 1 h<span class="longLabel">our</span></div>
+			<div> | </div>
+			<div id="subtractHour">- 1 h<span class="longLabel">our</span></div>
+			<div> | </div>
+			<div id="addMinute">+ 1 m<span class="longLabel">inute</span></div>
+			<div> | </div>
+			<div id="subtractMinute">- 1 m<span class="longLabel">inute</span></div>
+			<div> | </div>
+			<div id="addTenSeconds">+ 10 s<span class="longLabel">econds</span></div>
+			<div> | </div>
+			<div id="subtractTenSeconds">- 10 s<span class="longLabel">econds</span></div>
+			<div> | </div>
+			<div id="resetTimeOffset">reset</div>
+			<div> | </div>
+			<div id="unmute">🔈</div>
+			<div id="mute">🔊</div>
 		</footer>
 	</main>
 </body>
