--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 			</div>
 		</section>
 		<footer>
-			<div id="addHour">+ 1 h<span class="longLabel">our</span></div>
-			<div> | </div>
-			<div id="subtractHour">- 1 h<span class="longLabel">our</span></div>
-			<div> | </div>
-			<div id="addMinute">+ 1 m<span class="longLabel">inute</span></div>
-			<div> | </div>
-			<div id="subtractMinute">- 1 m<span class="longLabel">inute</span></div>
-			<div> | </div>
-			<div id="addTenSeconds">+ 10 s<span class="longLabel">econds</span></div>
-			<div> | </div>
-			<div id="subtractTenSeconds">- 10 s<span class="longLabel">econds</span></div>
-			<div> | </div>
+			<div id="addHour">+1 h<span class="longLabel">our</span></div>
+			<div class="longLabel"> | </div>
+			<div id="subtractHour">-1 h<span class="longLabel">our</span></div>
+			<div class="longLabel"> | </div>
+			<div id="addMinute">+1 m<span class="longLabel">inute</span></div>
+			<div class="longLabel"> | </div>
+			<div id="subtractMinute">-1 m<span class="longLabel">inute</span></div>
+			<div class="longLabel"> | </div>
+			<div id="addTenSeconds">+10 s<span class="longLabel">econds</span></div>
+			<div class="longLabel"> | </div>
+			<div id="subtractTenSeconds">-10 s<span class="longLabel">econds</span></div>
+			<div class="longLabel"> | </div>
 			<div id="resetTimeOffset">reset</div>
-			<div> | </div>
+			<div class="longLabel"> | </div>
 			<div id="unmute">🔈</div>
 			<div id="mute">🔊</div>
 		</footer>
