Few bug fixes, and dates have been added

--- a/index.html
+++ b/index.html
@@ -24,26 +24,29 @@
 				<div class="box minute clockM"></div>
 				<div class="box hour clockH"></div>
 			</div>
-			<span id="digitalClock"></span>
+			<h1 id="digitalClock"></h1>
+			<h2 id="date"></h2>
 			<div id="ripleyOuter">
 				<p id="ripleySpeaks"></p>
 				<img id="ripley" src="img/suit.png">
 			</div>
 		</section>
 		<footer>
-			<div id="addHour">+1 h<span class="longLabel">our</span></div>
+			<div id="addHour">+1h<span class="longLabel">our</span></div>
 			<div class="longLabel"> | </div>
-			<div id="subtractHour">-1 h<span class="longLabel">our</span></div>
+			<div id="subtractHour">-1h<span class="longLabel">our</span></div>
 			<div class="longLabel"> | </div>
-			<div id="addMinute">+1 m<span class="longLabel">inute</span></div>
+			<div id="addMinute">+1m<span class="longLabel">inute</span></div>
 			<div class="longLabel"> | </div>
-			<div id="subtractMinute">-1 m<span class="longLabel">inute</span></div>
+			<div id="subtractMinute">-1m<span class="longLabel">inute</span></div>
 			<div class="longLabel"> | </div>
-			<div id="addTenSeconds">+10 s<span class="longLabel">econds</span></div>
+			<div id="addTenSeconds">+10s<span class="longLabel">econds</span></div>
 			<div class="longLabel"> | </div>
-			<div id="subtractTenSeconds">-10 s<span class="longLabel">econds</span></div>
+			<div id="subtractTenSeconds">-10s<span class="longLabel">econds</span></div>
 			<div class="longLabel"> | </div>
 			<div id="resetTimeOffset">reset</div>
+			<div class="longLabel"> | </div>
+			<div id="utcToggle">UTC</div>
 			<div class="longLabel"> | </div>
 			<div id="unmute">🔈</div>
 			<div id="mute">🔊</div>
