--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
 </head>
 <body>
 	<main>
-		<header>
-			
-		</header>
 		<section>
 			<div id="analogClock">
 				<div class="box second clockS"></div>
-				<div class="box minute clockM"></div>
+				<div class="box minute clockI"></div>
 				<div class="box hour clockH"></div>
 			</div>
 			<h1 id="digitalClock"></h1>
