--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<h2 id="date"></h2>
 			<div id="ripleyOuter">
 				<p id="ripleySpeaks"></p>
-				<img id="ripley" src="img/suit.png">
+				<img id="ripley" src="img/suit.png" alt="Ripley">
 			</div>
 		</section>
 		<footer>
